--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <!-- Title -->
-    <title>Raagamplus</title>
+    <title>Sam Fredrick</title>
 
     <!-- Metas -->
     <meta charset="utf-8" />
